# GG_PSQL_BD2

./: CMakeLists.txt  README.md  main.cpp
Components/: Alumno.h  FileEntity.h  Game.h  Graph.h  Planner.h  SequentialFile.h  Sql.h  VariableRecord.h  edge.h  extendible.h  node.h
Components/ExtendibleHashing/: Bucket.h  Extendible.h  GeneralFunct.h  GeneralHeader.h  Juego.h  Makefile  main.cpp  prueba.txt
Controller/: AppController.h
Testcases/: TestController.h  TestExtendible.h  TestPlanner.h  TestSequential.h
data/: Alumno.txt
qtSequentialFile/: Alumno.h  Alumno.txt  AppController.h  BD-P1-intent2.pro  FileEntity.h  SequentialFile.h  Sql.h  TestController.h  TestSequential.h  VariableRecord.h  auxfile.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  output.txt
